# codex-sdk-rs

./: Cargo.toml  Makefile  README.md  deny.toml  rustfmt.toml
.github/workflows/: pr-ci.yml
docs/: api-parity.md  native-codex-developer-guide.md  sdk-user-guide.md  upgrade-checklist.md
example/: Cargo.toml
example/src/: main.rs
examples/: README.md  interactive_repair.rs  minimal.rs  native_request.rs  parallel_batch.rs  remote_client.rs  repo_review.rs  runtime_ops.rs  thread_lifecycle.rs
examples/common/: mod.rs
src/: client.rs  entry.rs  error.rs  event.rs  lib.rs  observability.rs  runtime.rs  thread.rs  thread_defaults.rs  turn.rs  types.rs  warmup.rs
src/runtime/: app_server.rs  events.rs  mailbox.rs  mod.rs
